--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body {
   background-color: #000;
+  font-family: var(--font-dm-sans);
 }
 
 .sidebar {
@@ -24,7 +25,7 @@ body {
   padding: 16px 0 0 16px;
 }
 
-.logo img {
+.sidebar__navigation .logo img {
   width: 80px;
 }
 
@@ -42,7 +43,6 @@ body {
   text-decoration: none;
   font-weight: 600;
   font-size: 14px;
-  font-family: "DM Sans", sans-serif;
 }
 
 .library {
@@ -71,7 +71,6 @@ body {
   border: 0px;
   font-size: 14px;
   font-weight: 700;
-  font-family: "DM Sans", sans-serif;
   text-align: center;
   text-decoration: none;
   text-transform: none;
@@ -80,8 +79,9 @@ body {
 
 .library .library__button .fa {
   font-size: 20px;
-  margin-right: 10px;
   font-weight: 300;
+  color: #b3b3b3;
+  margin-right: 10px;
   padding-right: 8px;
 }
 
@@ -111,7 +111,6 @@ body {
 .section-playlist__content .text {
   padding-bottom: 14px;
   color: #fff;
-  font-family: "DM Sans", sans-serif;
 }
 
 .section-playlist__content .title {
@@ -131,7 +130,6 @@ body {
   border-radius: 20px;
   font-size: 12px;
   font-weight: 700;
-  font-family: "DM Sans", sans-serif;
   text-decoration: none;
   text-transform: none;
   padding: 10px;
@@ -166,4 +164,43 @@ body {
   margin: 8px;
   padding: 8px;
   border-radius: 20px;
+}
+
+.disclaimer-premium {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(to right, #ae2896, #509bf5);
+  padding: 15px 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.disclaimer-premium .text {
+  flex-shrink: 0;
+  color: #fff;
+}
+
+.disclaimer-premium .text .disclaimer-premium__title {
+  font-weight: 700;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.disclaimer-premium .text .disclaimer-premium__subtitle {
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.disclaimer-premium__button button {
+  background-color: #fff;
+  color: #000;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 14px 30px;
+  border: 0px;
+  border-radius: 40px;
+  cursor: pointer;
+  flex-shrink: 0;
 }
